--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
    <div>
         <a>Содержание</a>
         <br>
-        <a href="./HW_1.html">Задание №1</a>
+        <a href="./1/HW_1.html">Задание №1</a>
         <br>
-        <a href="./HW_2.html">Задание №2</a>
+        <a href="./2/HW_2.html">Задание №2</a>
         <br>
         <a href="./ToDo.html">Практическая</a>
         <br>
         <a href="./HW_3.html">Задание №3</a>
         <br>
-        <a href="./HW_4.html">Задание №4</a>
+        <a href="./4/HW_4.html">Задание №4</a>
         <br>
         <a href="./HW_5.html">Контрольная</a>    
    </div>
