The server address replacement

--- a/4/HW_4.html
+++ b/4/HW_4.html
@@ -188,7 +188,7 @@ async function getData2 (key_word, subsection, link = 'https://swapi.dev/api/peo
 3. Принять ответ от сервера и вывести в консоль, используя async/await.</pre>
 <pre><u>Ответ:</u><br><code>
 Клиент
-async function sendData (data = new Object, link = 'https://bbmods.ru/echo')
+async function sendData (data = new Object, link = 'https://nodeserver.ru/echo')
 {
     data.message = document.querySelector('textarea').value;
     const response = await fetch(link,
