--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <br>
         <a href="./ToDo.html">Практическая</a>
         <br>
-        <a href="./HW_3.html">Задание №3</a>
+        <a href="./3/HW_3.html">Задание №3</a>
         <br>
         <a href="./4/HW_4.html">Задание №4</a>
         <br>
-        <a href="./HW_5.html">Контрольная</a>    
+        <a href="./5/HW_5.html">Контрольная</a>    
    </div>
 </body>
 
