--- a/3/HW_3.html
+++ b/3/HW_3.html
@@ -3,7 +3,7 @@
 
 <head>
     <link href = "HW_3.css" rel = "stylesheet">
-    <link href = "fonts/DotGothic16-Regular.ttf" rel = "preload" as = "font" type = "font/ttf">
+    <link href = "../fonts/DotGothic16-Regular.ttf" rel = "preload" as = "font" type = "font/ttf">
     <meta charset = "UTF-8">
     <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
