--- a/5/HW_5.html
+++ b/5/HW_5.html
@@ -4,7 +4,7 @@
 <head>
     <title>SW Planets List</title>
     <style>
-        body {background: url(images/space.jpg) center no-repeat;
+        body {background: url(../images/space.jpg) center no-repeat;
               background-size: cover}
     </style>
     <script defer src = "HW_5.js"></script>
